--- a/index.html
+++ b/index.html
@@ -1190,6 +1190,8 @@ polyhedron<model::d3::point_xyz<double>> convex_hull3D(Geometry1 const& input)
 #include<chrono>
 #include<random>
 
+#include<boost/geometry.hpp>
+
 using namespace boost::geometry;
 using namespace std::chrono;
 
